fixed image problem in widget and ran evals
